# task-manager-api

./: .gitignore  README.md  alembic.ini  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 3a2d0fd9a343_create_task_table.py  5e72e314f319_add_user_table.py
src/task_manager_api/: __init__.py  auth.py  database.py  main.py  model.py
src/task_manager_api/routers/: auth.py  tasks.py
