[project]
name = "task-manager-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sagivt1", email = "sagiv.talker@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.3",
    "uvicorn>=0.37.0",
]

[project.scripts]
task-manager-api = "task_manager_api:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
